[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/uic_pop_up.gd" id="1_a2kr7"]
[ext_resource type="Theme" uid="uid://bs2r3i8holn3o" path="res://resources/drawable/st_pop_up.tres" id="1_ks5xk"]
[ext_resource type="Shader" path="res://resources/drawable/shaders/blur.gdshader" id="2_iysux"]
[ext_resource type="PackedScene" path="res://scenes/uic_btn_help.tscn" id="3_oipx0"]
[ext_resource type="FontFile" uid="uid://fpaac2jgu5ga" path="res://resources/drawable/fonts/dejavu-sans/DejaVuSans.ttf" id="4_4rk2f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m3g5p"]
shader = ExtResource("2_iysux")
shader_parameter/lod = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvqkk"]
bg_color = Color(1, 1, 1, 1)

[node name="PopUp" type="Control"]
process_mode = 3
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_a2kr7")

[node name="ScreenBG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="C" type="Control" parent="."]
custom_minimum_size = Vector2(800, 210)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -105.0
offset_right = 400.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ks5xk")

[node name="C" type="Control" parent="C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 5.0
offset_right = -100.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Blur" type="Panel" parent="C/C"]
material = SubResource("ShaderMaterial_m3g5p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nvqkk")

[node name="Stroke" type="Panel" parent="C/C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ks5xk")
theme_type_variation = &"BGStroke"

[node name="BG" type="Panel" parent="C/C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ks5xk")
theme_type_variation = &"BG"

[node name="C" type="VBoxContainer" parent="C/C"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="C" type="HBoxContainer" parent="C/C/C"]
layout_mode = 2
alignment = 1

[node name="Header" type="Label" parent="C/C/C/C"]
layout_mode = 2
text = "Pop up header"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="C/C/C"]
layout_mode = 2

[node name="Text" type="Label" parent="C/C/C"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme_override_fonts/font = ExtResource("4_4rk2f")
text = "Pop up text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="C/C/C"]
layout_mode = 2
size_flags_vertical = 10

[node name="C3" type="HBoxContainer" parent="C/C/C"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 166
alignment = 1

[node name="BtnCancel" parent="C/C/C/C3" instance=ExtResource("3_oipx0")]
layout_mode = 2
text = "Cancel"
wait_time = 0.05
one_shot = true

[node name="BtnOk" parent="C/C/C/C3" instance=ExtResource("3_oipx0")]
layout_mode = 2
key_btn = "R"
wait_time = 0.05
one_shot = true

[node name="ShadowMask" type="Panel" parent="C"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_ks5xk")
theme_type_variation = &"BGMask"
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Shadow" type="Panel" parent="C/ShadowMask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="C/C/C/C3/BtnCancel" to="." method="_on_btn_cancel_pressed"]
[connection signal="pressed" from="C/C/C/C3/BtnOk" to="." method="_on_btn_ok_pressed"]
